<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoAnDiDong</string>
    <string name="tenmonSP">Tên món</string>
    <string name="donvimonSP">Đơn vị tính</string>
    <string name="nhomSP">Nhóm</string>
    <string name="loaiSP">Loại</string>
    <string name="titleSP">Sản phẩm mặc định</string>
    <string name="giabanSP">Giá bán lẽ</string>
    <string name="vonSP">Vốn</string>
    <string name="maSP">Mã sản phẩm</string>
    <string name="hintSo">0</string>
    <string name="buttonLuu">Lưu</string>
    <string name="title_activity_quan_ly_nhan_vien">QuanLyNhanVien</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_thu_chi">ThuChiActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_ban_hang">BanHangActivity</string>

    <string-array name="drink">
        <item>Cafe Den</item>
        <item>Cafe Sua</item>
        <item>Redbull</item>
        <item>Seven Up</item>
    </string-array>
    <string-array name="description">
        <item>18.000đ</item>
        <item>22.000đ</item>
        <item>20.000đ</item>
        <item>20.000đ</item>
    </string-array>
    <string-array name="type">
        <item>Phổ biến</item>
        <item>Cafe</item>
        <item>Đồ uống có ga</item>

    </string-array>
</resources>